# fastly-rust-image-resizer

./: Cargo.toml  fastly.toml
src/: main.rs
