
[dependencies]
  fastly = "^0.8.0"
  serde_json = "1.0.67"
  bytes = "1.1.0"
  reqwest = { version = "0.11.10", features = ["blocking"] }
  image = { version = "0.24.1", default-features = false, features = ["gif", "avif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
  nanorand = { version = "0.5.2"}

[package]
  authors = []
  edition = "2018"
  name = "image-resize"
  publish = false
  version = "0.1.0"

[profile]

  [profile.release]
    debug = 1
